# billing-software

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: init_db.py
backend/backend/app/api/routes/: __init__.py  auth.py  products.py
backend/backend/app/core/: __init__.py  security.py
backend/backend/app/db/: session.py
backend/backend/app/models/: enums.py  models.py
backend/frontend-web/: package-lock.json  tailwind.config.js
backend/frontend-web/src/: App.jsx
backend/frontend-web/src/components/common/: index.jsx
backend/frontend-web/src/dashboards/admin/: AdminApp.jsx
backend/frontend-web/src/dashboards/admin/components/layout/: AdminLayout.jsx  Navbar.jsx  Sidebar.jsx
backend/frontend-web/src/dashboards/admin/context/: AdminContext.jsx
backend/frontend-web/src/dashboards/admin/pages/: Dashboard.jsx  Inventory.jsx  Login.jsx  Profile.jsx  Reports.jsx  S1.jsx  S2.jsx  Settings.jsx  Suppliers.jsx  Transaction.jsx  Verification.jsx  s4.jsx
backend/frontend-web/src/dashboards/cashier/components/layout/: MainLayout.jsx  SettingsLayout.jsx  Sidebar.jsx  (+1 more)
backend/frontend-web/src/dashboards/cashier/context/: CashierContext.jsx
backend/frontend-web/src/dashboards/cashier/data/: mockData.js
backend/frontend-web/src/dashboards/cashier/pages/: Dashboard.jsx  Login.jsx  POS.jsx  Products.jsx  Profile.jsx  Receipt.jsx  S1General.jsx  S2BillingPOS.jsx  S3IoTDevices.jsx  S4Notifications.jsx  S5Security.jsx  Transactions.jsx  Verification.jsx
backend/frontend-web/src/styles/: index.css
(+36 files in other folders)
