[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "pymysql>=1.1.2",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]
